<resources>
    <string name="app_name">IWash</string>
    <string name="login_phone_hint">Phone number (+84)</string>
    <string name="login_name_hint">Name</string>
    <string name="login_address_hint">Address</string>
    <string name="login_password_hint">Password</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="account">Account</string>
    <string name="more">More</string>
    <string name="otp">OTP</string>
    <string name="book_service">Book Services</string>
    <string name="more_service">More Services</string>
    <string name="header_text_home">Do something!</string>
    <string name="add_vehicle">Your vehicle</string>
    <string name="wash_services">Wash services</string>
    <string name="car_wash">Car wash</string>
    <string name="motorcycle_wash">Motorcycle wash</string>
    <string name="oil_service">Oil service</string>
    <string name="maintenance_service">Maintenance</string>
    <string name="news">News</string>
    <string name="my_account">My account</string>
    <string name="userName">My Name</string>
    <string name="myPhone">+84...</string>
    <string name="messages">Messages</string>
    <string name="editInfor">Edit information</string>
    <string name="report">Report technical problems</string>
    <string name="logout">Logout</string>
    <string name="history">Service usage history</string>
    <string name="notification">Notification</string>
    <string name="accInfo">Account information</string>
    <string name="feedback">Feedback</string>
    <string name="yourInformation">Your Information</string>
    <string name="full_name">FULL NAME *</string>
    <string name="email">EMAIL</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="phone">0389793148</string>
    <string name="address">ADDRESS</string>
    <string name="update_infor">UPDATE</string>
    <string name="question0">1. Which have do you rate IWash ?</string>
    <string name="question1">2. What we can improve to make you more satisfied ?</string>
    <string name="question2">3. What makes you most satisfied when using our service ?</string>
    <string name="title_feedback">Help us understand to better serve you</string>
    <string name="exit">Exit</string>
    <string name="send">Submit</string>
    <string name="dismiss">Dismiss</string>
    <string name="loaixe">Loại xe</string>
    <string name="hangxe">Hãng xe</string>
    <string name="bienso">Biển số</string>
    <string name="color">Màu xe</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_vehicles">Add vehicles</string>
    <string name="storeAddress">Store address</string>
    <string name="change">Change</string>
    <string name="local">394 đường cầu giấy, Dịch Vọng, quận Cầu Giấy, Hà Nội</string>
    <string name="local1">80/8 Xuân Phương, Nam Từ Liêm, Hà Nội</string>
    <string name="chooseTime">Choose Time</string>
    <string name="Description">Description</string>
    <string name="choose_vehicles">Choose vehicles</string>
    <string name="Schedule">Schedule</string>
    <string name="title_activity_maps">Map</string>
    <string name="Vietname">Vietnamese</string>
    <string name="English">English</string>
</resources>