<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themeColor">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        style="@style/viewParent.headerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fb"
        android:padding="8dp"
        android:text="@string/title_feedback" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/viewParent.elementText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question0" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Very good" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Good" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Normal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Not good" />
            </RadioGroup>


            <TextView
                style="@style/viewParent.elementText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1" />

            <EditText
                android:id="@+id/edt_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black" />

            <TextView
                style="@style/viewParent.elementText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2" />

            <EditText
                android:id="@+id/edt_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/card" />
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="20dp"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#C4C4C4"
                    android:onClick="exit"
                    android:text="@string/dismiss" />
                <TextView
                    android:textSize="20dp"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    android:textColor="@color/card"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#C4C4C4"
                    android:onClick="send"
                    android:text="@string/send" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>